Bug 804988 - Clear the DSTOffsetCache when timezone change is detected. r=Waldo, a=blocking-basecamp